--- a/package.json
+++ b/package.json
@@ -13,5 +13,16 @@
     "funtctional"
   ],
   "author": "Michael Lawrie",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
+    "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "check-error": "^1.0.2"
+  },
+  "peerDependencies": {
+    "chai": ">= 2.1.2 < 4"
+  }
 }
