--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Asynchronous assertion library for fast, high-level behavioral testing",
   "main": "hereafter.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha ./spec/*.spec.js"
+    "nodeTest": "./node_modules/mocha/bin/mocha ./spec/*.spec.js",
+    "karmaTest": "karma start --single-run",
+    "test": "set -e; npm run nodeTest; npm run karmaTest"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,11 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "karma": "^1.3.0",
+    "karma-browserify": "^5.1.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6"
   },
