--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
-    "sinon": "^1.17.6"
+    "sinon": "^1.17.6",
+    "watchify": "^3.8.0"
   },
   "peerDependencies": {
     "chai": ">= 2.1.2 < 4"
