--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "hereafter.js",
   "scripts": {
     "nodeTest": "./node_modules/mocha/bin/mocha ./spec/*.spec.js",
-    "karmaTest": "karma start --single-run",
+    "karmaTest": "./node_modules/karma/bin/karma start --single-run",
     "test": "set -e; npm run nodeTest; npm run karmaTest"
   },
   "repository": {
@@ -30,7 +30,6 @@
     "karma-browserify": "^5.1.0",
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "watchify": "^3.8.0"
