--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "axios": "^0.17.1",
     "chai": "^3.5.0",
     "jest": "^17.0.3",
     "jshint": "^2.9.4",
@@ -35,6 +36,7 @@
     "karma-firefox-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "mocha": "^3.2.0",
+    "node-fetch": "^1.7.3",
     "sinon": "^1.17.6",
     "watchify": "^3.8.0"
   },
