--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "license": "MIT",
   "devDependencies": {
     "axios": "^0.17.1",
-    "chai": "^3.5.0",
+    "chai": "^4.1.2",
     "jest": "^17.0.3",
     "jshint": "^2.9.4",
     "karma": "^1.3.0",
@@ -41,7 +41,7 @@
     "watchify": "^3.8.0"
   },
   "peerDependencies": {
-    "chai": ">= 2.1.2 < 4"
+    "chai": ">= 2.1.2"
   },
   "dependencies": {
     "bluebird": "^3.4.6"
